# protobuf

./: .bazelrc  MODULE.bazel  WORKSPACE
conformance/: test_manager.cc
hpb/: hpb.h
hpb/backend/upb/: interop.h
hpb_generator/: gen_accessors.cc  gen_repeated_fields.cc
java/core/: BUILD.bazel
java/core/src/main/java/com/google/protobuf/: ArrayDecoders.java  CodedInputStream.java
java/core/src/test/java/com/google/protobuf/: ProtobufToStringOutputTest.java
java/lite/src/test/java/com/google/protobuf/: LiteTest.java
java/runtime_conformance/: BUILD.bazel  add_conformance_test_case.sh  runtime_conformance.bzl
java/runtime_conformance/v3.25.3/com/google/protobuf/test/: UnittestImport.java  UnittestImportPublic.java
python/: descriptor_pool.c  message.c
python/google/protobuf/internal/: api_implementation.cc  message_test.py
python/google/protobuf/pyext/: message_module.cc
rust/: BUILD  cpp.rs  upb.rs
rust/cpp_kernel/: map.cc
rust/test/: BUILD
rust/test/cpp/interop/: BUILD
rust/test/shared/: accessors_repeated_test.rs
rust/upb/: lib.rs  message.rs  mini_table.rs
rust/upb/sys/: BUILD
src/google/protobuf/: BUILD.bazel  cpp_features.pb.cc  cpp_features.pb.h  descriptor.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  descriptor_unittest.cc  dynamic_message.cc  generated_message_reflection.cc  map_field.h  message.cc  message_lite.cc  message_lite.h  message_unittest.inc  no_field_presence_test.cc  port.h  port_test.cc  reflection_visit_field_info.h
src/google/protobuf/compiler/: annotation_test_util.cc  annotation_test_util.h  code_generator.cc  code_generator_unittest.cc  command_line_interface.cc  command_line_interface_tester.cc  command_line_interface_tester.h  command_line_interface_unittest.cc  importer_unittest.cc  mock_code_generator.h  plugin.pb.cc  plugin.pb.h
src/google/protobuf/compiler/cpp/: file_unittest.cc  generator.cc  generator_unittest.cc  message.cc
src/google/protobuf/compiler/cpp/tools/: analyze_profile_proto_test.cc
src/google/protobuf/compiler/java/: java_features.pb.cc  java_features.pb.h
src/google/protobuf/compiler/kotlin/: BUILD.bazel  file.cc  file.h  generator_factory.h
src/google/protobuf/compiler/kotlin/full/: BUILD.bazel  generator_factory.cc  generator_factory.h  message.cc  message.h
src/google/protobuf/compiler/kotlin/lite/: BUILD.bazel  generator_factory.cc  generator_factory.h  message.cc  message.h
src/google/protobuf/compiler/rust/: message.cc  naming.cc  naming.h
src/google/protobuf/testing/: googletest.cc
upb/message/: compare.c  compare.h  compat.c  value.h
upb/port/: def.inc
