# Simple build tests for compatibility of gencode from previous major versions
# with the current runtime.
#
# To add more test cases, use runtime_conformance as below, and add the corresponding
# http_archive in the WORKSPACE file.

load("//java/runtime_conformance:runtime_conformance.bzl", "runtime_conformance")

# Generates a build_test named "conformance_v3.25.0"
runtime_conformance(gencode_version = "3.25.0", tags = ["manual"])

